Code formatting changes

--- a/module/Cellphone/view/cellphone/index/view.phtml
+++ b/module/Cellphone/view/cellphone/index/view.phtml
@@ -8,7 +8,7 @@
 ?>  
 Model: <?php echo $phone->getModel()?>
 <br />Manufacturer: <?php echo $phone->getManufacturer()->getName()?>
-<br />Description: <?php echo $phone->getModel()?>
+<br />Description: <?php echo $phone->getDescription()?>
 <br />Weight: <?php echo $phone->getWeight()?>
 <br />Memory: <?php echo $phone->getMemory()?>
 <br />Size: <?php echo $phone->getSize()?>
